--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,10 +25,10 @@ body {
 /********************* Header ****************************/
 #header {
     position: relative;
-    background-image: url("../img/header-bg.jpg");
+    background-image: url("../img/header-bg.png");
     height: 630px;
     /* Create the parallax scrolling effect */
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -38,7 +38,10 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: rgba(2,146,219,.3);
+    background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 64%, rgba(255,255,255,1) 100%);
+    background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 64%,rgba(255,255,255,1) 100%);
+    background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 64%,rgba(255,255,255,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 );
 }
 #header .row {
     position: absolute;
@@ -69,7 +72,7 @@ body {
     color: #FFF;
     background-color: #25365d;
 }
-#header .btn .fa {
+.btn.btn-custome .fa {
     color: #7f97be;
     margin: 0 5px;
 }
@@ -78,7 +81,6 @@ body {
 /********************* Download ****************************/
 #download {
     position: relative;
-    margin-top: 75px;
     margin-bottom: 150px;
 }
 #download h1 {
@@ -142,6 +144,7 @@ body {
 #plans {
     padding: 50px 0;
     position: relative;
+    background-color: #f7f9fb;
 }
 #plans h1 {
     color: #25365d;
@@ -189,3 +192,30 @@ body {
     font-size: 22px;
 }
 /********************* Plans ****************************/
+
+/********************* Free ****************************/
+#free {
+    padding: 75px 0 0;
+    min-height:300px;
+}
+#free h1 {
+    color: #25365d;
+    font-weight: 700;
+}
+#free p {
+    font-size: 16px;
+    padding-top: 30px;
+    color: #25365d;
+}
+/********************* Free ****************************/
+
+/********************* Footer ****************************/
+#footer {
+    height: 350px;
+    background-image: url('../img/footer-bg.png') ;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+}
+/********************* Footer ****************************/
