--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,7 +210,7 @@ body {
 
 /********************* Plans ****************************/
 #plans {
-    padding: 50px 0;
+    padding: 50px 0 80px;
     position: relative;
     background-color: #f7f9fb;
 }
@@ -260,6 +260,56 @@ body {
     font-size: 22px;
 }
 /********************* Plans ****************************/
+
+/********************* Testimonials ****************************/
+#testimonials {
+    background: url("../img/testimonials.jpg") no-repeat center center fixed;
+}
+#testimonials .overlay {
+    background-color: rgba(37,54,93,.7);
+    padding: 70px 0;
+}
+#testimonials h1 {
+    margin-top: 0px;
+    margin-bottom: 50px;
+    color: #FFF;
+    font-weight: 700;
+}
+#testimonials #carousel_testimonials p {
+    font-size: 16px;
+    color: #FFF;
+}
+#testimonials span {
+    font-size: 18px;
+    color: #FFF;
+    font-weight:700;
+}
+#testimonials .carousel-indicators {
+    position:static;
+    bottom: 0;
+    width:100%;
+    margin-left:auto;
+    padding-top:20px
+}
+#testimonials .carousel-indicators li {
+    text-indent:0;
+    width:80px;
+    height:80px;
+    opacity:0.7;
+    border: 3px solid #FFF;
+    border-radius:50%;
+    overflow:hidden;
+    margin:5px
+}
+#testimonials .carousel-indicators li.active {
+    width:80px;
+    height:80px;
+    opacity:1;
+    background:none;
+    border: 3px solid #FFF;
+}
+#testimonials .carousel-indicators li img {max-width:100%}
+/********************* Testimonials ****************************/
 
 /********************* Free ****************************/
 #free {
