--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,9 @@ Version : 1.0
 /********************* Global ****************************/
 body {
     font-family: 'Open Sans', sans-serif;
+    overflow-x: hidden;
 }
+
 /********************* Global ****************************/
 /********************* NavBar ****************************/
 .navbar-default {
@@ -81,7 +83,7 @@ body {
     right: 0;
     bottom: 0;
     left: 0;
-    width: 55%;
+    width: 100%;
     height: 50%;
     color: #FFF;
 }
@@ -133,7 +135,6 @@ body {
 }
 #download p {
     margin-top: 35px;
-    width:50%;
     font-size: 15px;
 }
 #download li {
@@ -162,6 +163,10 @@ body {
 }
 #features .feat {
     padding: 50px 0;
+}
+#features .feat .fa {
+    text-align: center;
+    width:20%;
 }
 #features .feat .description {
     width: 80%;
@@ -193,7 +198,7 @@ body {
     font-weight: 700;
 }
 #projects .menu {
-    margin: 50px 0 30px -15px;
+    margin: 50px 0 30px 0;
 }
 #projects .menu li {
     cursor: pointer;
@@ -236,15 +241,15 @@ body {
     height:100%;
     width:100%;
     background-color: rgba(37,54,93,.8);
-    line-height: 260px;
+    padding-top: 105px;
     text-align: center;
     color: #FFF;
     display: none;
 }
 #projects .item .like {
     position: absolute;
-    bottom:10%;
-    right:10%;
+    bottom:5%;
+    right:5%;
     font-weight:700;
     color: #FFF;
     display: none;
@@ -269,7 +274,7 @@ body {
     font-size: 16px;
 }
 #plans .plan {
-    margin: 30px 0 75px;
+    margin: 15px 0 15px;
     padding: 35px 0;
     background-color: #FFF;
     /* Box Shadow */
@@ -294,13 +299,15 @@ body {
     font-style: normal;
 }
 #plans .contact {
-    width:55%;
-    margin: 0 auto;
+    margin: 75px auto;
     color: #25365d;
 }
 #plans .contact ul {
     font-weight: 700;
     font-size: 22px;
+}
+#plans .contact li {
+    margin: 10px 0 0 ;
 }
 /********************* Plans ****************************/
 
@@ -387,3 +394,92 @@ body {
     background: #FFF;
 }
 /********************* Hover.CSS ****************************/
+
+/********************* ScrollToTop ****************************/
+#scroll {
+    right:10px;
+    bottom:10px;
+    position: fixed;
+    display: none;
+}
+#scroll a {
+    color: rgba(37,54,93,.3);
+    -webkit-transition: all .5s; /* Safari */
+    transition: all .5s;
+    -webkit-transition-timing-function: ease;
+    transition-timing-function: ease;
+}
+#scroll:hover a{
+    cursor: pointer;
+    color: rgba(37,54,93,1);
+}
+/********************* ScrollToTop ****************************/
+
+/********************* Media Queries ****************************/
+/********** SM and UP *********/
+@media (min-width: 768px) {
+    #plans .contact {
+        width:55%;
+    }
+    #plans .contact li {
+        margin: 0 ;
+    }
+    #projects .menu {
+        margin: 50px 0 30px -15px;
+    }
+}
+/********** MD and UP *********/
+@media (min-width: 992px) {
+    #header .row {
+        width: 55%;
+    }
+    #download p {
+        width:50%;
+    }
+}
+/************ MD and Less ***********/
+@media (max-width: 992px) {
+    .navbar-default {
+        margin-top: 0px;
+        padding: 15px 0;
+    }
+    .navbar-default li {
+        margin: 0 10px;
+    }
+    .navbar-default .form-control {
+        padding-left: 30px;
+    }
+    .input-group-addon {
+        padding-left: 0px;
+        color: #FFF;
+        background: transparent;
+        border:none;
+        -webkit-border-radius:0px;
+        -moz-border-radius:0px;
+        border-radius:0px;
+    }
+    .input-group-addon .fa {
+        margin-right: -55px;
+    }
+    .navbar-default .navbar-collapse,
+    .navbar-default .navbar-form {
+        border: none;
+        -webkit-box-shadow: none ;
+        -moz-box-shadow: none ;
+        box-shadow: none ;
+    }
+    .navbar-default {
+        background-color: rgba(37,54,93,.8);
+    }
+}
+/************* NavBar ***************/
+.navbar-default .navbar-toggle,
+.navbar-default .navbar-toggle:focus,
+.navbar-default .navbar-toggle:hover {
+    background-color: transparent;
+    border: none;
+}
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: #FFF;
+}
+/********************* Media Queries ****************************/
